# forma

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
forma/: Cargo.toml  all.html  constant.DEFAULT_MAX_WIDTH.html  fn.formatter.html  fn.main.html  fn.write_formatted.html  index.html  sidebar-items.js  struct.Opt.html
forma-lib/: Cargo.toml
forma-lib/src/: doc.rs  lib.rs
forma-lib/src/dialect/: mod.rs
forma/publish/: Cargo.toml
forma/src/: main.rs
forma/tests/: cli_test.rs  forma_test.rs
formation/: Cargo.toml  all.html  index.html  sidebar-items.js
formation/benches/: formation_bench.rs
formation/error/: enum.FormaError.html  index.html  sidebar-items.js  type.Result.html
formation/format/: fn.format.html  index.html  sidebar-items.js
formation/src/: constants.rs  dialect.rs  doc.rs  error.rs  format.rs  lib.rs
formation/src/dialect/: templated.rs
formation/src/doc/: body.rs  common.rs  expr.rs  mod.rs  query.rs
formation/tests/: format_test.rs
formation/tests/sql/: between.sql  between_expected.sql  case.sql  case_expected.sql  cast.sql  cast_expected.sql  collate.sql  collate_expected.sql  correlated_subquery.sql  correlated_subquery_expected.sql  cross_join.sql  cross_join_expected.sql  ctes.sql  ctes_expected.sql  date_expected.sql  evaluation_order.sql  evaluation_order_expected.sql  exists.sql  exists_expected.sql  extract.sql  extract_expected.sql  fetch.sql  fetch_expected.sql  full_join.sql  full_join_expected.sql  function.sql  function_expected.sql  group_by.sql  group_by_expected.sql  having.sql  having_expected.sql  inner_join.sql  inner_join_expected.sql  interval.sql  interval_expected.sql  join_using.sql  join_using_expected.sql  listagg.sql  listagg_expected.sql  natural_join.sql  (+25 more)
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
src/: main.rs
src/dialect/: templated.rs
src/forma/: main.rs.html
src/formation/: constants.rs.html  dialect.rs.html  doc.rs.html  error.rs.html  format.rs.html  lib.rs.html
src/formation/dialect/: mod.rs.html  templated.rs.html
src/formation/doc/: body.rs.html  common.rs.html  expr.rs.html  query.rs.html
