[package]
name = "forma-lib"
version = "0.0.0"
authors = ["Max Countryman <maxc@me.com>"]
edition = "2018"
description = "A deflightful SQL formatter."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.5.0"
pretty = "0.10.0"
