[package]
name = "forma"
version = "0.3.0"
authors = ["Max Countryman <maxc@me.com>"]
homepage = "https://github.com/maxcountryman/forma"
repository = "https://github.com/maxcountryman/forma"
readme = "../README.md"
edition = "2018"
description = "An opinionated SQL formatter."
license = "MIT"
keywords = ["sql", "formatter", "sql-formatter", "pretty-printer"]

[dependencies]
formation = { path = "../formation", version = "0.3.0" }
structopt = "0.3.21"
anyhow = "1.0.39"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"
