[package]
name = "formation"
version = "0.1.0"
authors = ["Max Countryman <maxc@me.com>"]
edition = "2018"
description = "An opinionated SQL formatter."
license = "MIT"

[dependencies]
sqlparser = "0.5.0"
pretty = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "formation_bench"
harness = false