[package]
name = "formation"
version = "0.1.2"
authors = ["Max Countryman <maxc@me.com>"]
homepage = "https://github.com/maxcountryman/forma"
repository = "https://github.com/maxcountryman/forma"
documentation = "https://docs.rs/formation"
readme = "../README.md"
edition = "2018"
description = "An opinionated SQL formatter."
license = "MIT"

[dependencies]
sqlparser = "0.5.0"
pretty = "0.10.0"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6.1"
rstest = "0.6.3"

[[bench]]
name = "formation_bench"
harness = false
