[package]
name = "formation"
version = "0.2.0"
authors = ["Max Countryman <maxc@me.com>"]
homepage = "https://github.com/maxcountryman/forma"
repository = "https://github.com/maxcountryman/forma"
documentation = "https://docs.rs/formation"
readme = "../README.md"
edition = "2018"
description = "An opinionated SQL formatter."
license = "MIT"
keywords = ["sql", "formatter", "sql-formatter", "pretty-printer"]

[dependencies]
sqlparser = "0.5.0"
pretty = "0.10.0"
thiserror = "1.0.19"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6.1"
rstest = "0.6.3"

[[bench]]
name = "formation_bench"
harness = false
